헤더영역 디자인

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="저의 포트폴리오 사이트를 만들 것 입니다."/>
     <meta name="keyword" content="포트폴리오, 리액트, react, react.js, 코딩 사이트, 사이트 만들기, 리덕스" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <title>나만의 포트폴리오 사이트 만들기 🧐</title>
+    <title>포트폴리오 사이트 🧐</title>
 </head>
 <body>
     <div id="root"></div>
